LayoutTests:

Reviewed by Dave Hyatt.

        Fixed <rdar://problem/4977124> | http://bugs.webkit.org/show_bug.cgi?id=12646
        REGRESSION: RapidWeaver's "Hello" HTML page doesn't display any DHTML
        effects when clicking on its links (12646)

        Added layout test for this bug:

        * fast/invalid/nestedh3s-rapidweaver-expected.txt: Added.
        * fast/invalid/nestedh3s-rapidweaver.html: Added.

        Reversed the expected results for this test because I rolled out r7703:

        * fast/invalid/nestedh3s-expected.checksum:
        * fast/invalid/nestedh3s-expected.png:
        * fast/invalid/nestedh3s-expected.txt:
        * fast/invalid/nestedh3s.html:

WebCore:

        Reviewed by Dave Hyatt.

        Fixed <rdar://problem/4977124> | http://bugs.webkit.org/show_bug.cgi?id=12646
        REGRESSION: RapidWeaver's "Hello" HTML page doesn't display any DHTML
        effects when clicking on its links (12646)

        I'm rolling our r7703 for these reasons:

        1. It broke RapidWeaver.

        2. WebKit is now orders of magnitude faster when handling deep nesting
        (5 seconds vs 3 minutes on my MBP in this particular case).

        3. Firefox, IE, and HTML5 all allow nested heading tags.

        4. Hyatt said so.

        * html/HTMLParser.cpp:
        (WebCore::HTMLParser::parseToken):



Canonical link: https://commits.webkit.org/18515@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@23728 268f45cc-cd09-0410-ab3c-d52691b4dbfc